--- a/supervisord.conf
+++ b/supervisord.conf
@@ -11,7 +11,8 @@ stdout_logfile=/var/log/mariadb.out
 stderr_logfile=/var/log/mariadb.err
 
 [program:tomcat]
-command=/bin/sh -c "/opt/app/wait-for-mysql.sh && catalina.sh run"
+; wait-for-mysql then start tomcat using full path (avoids "command not found")
+command=/bin/sh -c "/opt/app/wait-for-mysql.sh && /usr/share/tomcat9/bin/catalina.sh run"
 environment=JAVA_HOME="/usr/lib/jvm/java-11-openjdk-amd64"
 autostart=true
 autorestart=true
